# one

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  .isort.cfg  .pylintrc  .style.yapf  .travis.yml  BUILD.bazel  CPPLINT.cfg  MODULE.bazel  README.adoc  README.md  WORKSPACE  WORKSPACE.bazel  copy.bara.sky  maven_install.json  mkdocs.yml  pom.xml  pyproject.toml  renovate.json  renovate.json5  requirements.txt
arrow/: BUILD.bazel  result.h
arrow/io/: hdfs_internal.h
arrow/util/: optional.h
bazel/: BUILD.bazel  compiler_config_setting.bzl  jni.bzl  junit5.bzl  repository_defs.bzl
bazel/config/: BUILD.bazel
bazel/copts/: configure.bzl  copts.bzl
codelab/arrow_examples/: BUILD.bazel  row-wise-conversion-example.cc
codelab/cpp-smoke-app/: BUILD.bazel  library.cc  library.h  library_test.cc  main.cc
codelab/java-smoke-app/: BUILD.bazel
codelab/kafka_broker_demo/: BUILD.bazel  api.h  broker_impl.cc  broker_impl.h  partition.cc  partition.h  partition_key.cc  partition_key.h  streaming_columnar_partition_impl.cc  streaming_columnar_partition_impl.h  wal_partition_impl.cc  wal_partition_impl.h
codelab/memtable/: BUILD.bazel  memtable.h  record_batch_builder_test.cc
codelab/parse_pb_on_the_fly/: BUILD.bazel  main.cc  messages.proto
codelab/pb_to_arrow/: BUILD.bazel  converter.cc  converter.h  converter_test.cc  list_debug.cc  main.cc  messages.proto  nested_debug.cc  pb_arrow_parquet.cc  status_util.cc  status_util.h
codelab/protobuf_encoder/: BUILD.bazel  encoder.cc  encoder.h  encoder_test.cc
codelab/read_bazel_runfiles/: BUILD.bazel  lipsum.txt  main.cc
config/: BUILD.bazel  config.h
directory_manifest/: BUILD.bazel  README.md  generator.cc  generator.h  main.cc  thread_pool.h
directory_manifest/src/main/java/io/github/hcoona/directory_manifest/: App.java  BUILD  Controller.java  LogErrorScheduledThreadPoolExecutor.java
gtl/: BUILD.bazel  README.adoc  atomic_sequence_num.h  auto_reset.h  auto_reset_unittest.cc  bits.h  bits_unittest.cc  compiler_specific.h  file_statistics.h  file_system.cc  file_system.h  file_system_helper.cc  file_system_helper.h  file_system_test.cc  guid.cc  guid.h  guid_unittest.cc  iterator_range.h  iterator_range_test.cc  location.cc  location.h  location_unittest.cc  macros.h  map_traits.h  map_util.h  map_util_test.cc  no_destructor.h  no_destructor_unittest.cc  null_file_system.h  path.cc  path.h  path_test.cc  posix_file_system.cc  posix_file_system.h  priority_queue_util.h  scanner.cc  scanner.h  scanner_test.cc  sequence_checker.h  sequence_checker_impl.cc  (+20 more)
gtl/container/: BUILD.bazel  circular_deque.h  circular_deque_unittest.cc  id_map.h  id_map_unittest.cc  ring_buffer.h  util.h  vector_buffer.h  vector_buffer_unittest.cc
gtl/crypto/: BUILD.bazel  openssl_util.cc  openssl_util.h  secure_hash.cc  secure_hash.h  secure_hash_unittest.cc  sha2.cc  sha2.h  sha2_unittest.cc
gtl/hash/: BUILD.bazel  sha1.h  sha1_boringssl.cc  sha1_unittest.cc
gtl/numeric/: BUILD.bazel  checked_math.h  checked_math_impl.h  clamped_math.h  clamped_math_impl.h  ranges.h  safe_conversions.h  safe_conversions_impl.h  safe_math.h  safe_math_clang_gcc_impl.h  safe_math_shared_impl.h  safe_numerics_unittest.cc
gtl/patches/: thread_checker.patch
gtl/patches/chromium/: circular_deque-stl_util-0002.patch  circular_deque.patch  crypto_gtl_namespace.patch  guid.patch  id_map.patch  location.patch  no_destructor.patch  secure_hash.patch  sequence_checker.patch  sequence_token.patch  sha1.patch  stl_util.patch  template_util.patch  thread_annotations.patch  thread_checker.patch  vector_buffer-stl_util-0002.patch  vector_buffer.patch
gtl/patches/tensorflow/: file_system.patch  file_system_fix_warning.patch  iterator_range.patch  map_util.patch  path.patch  scanner.patch  top_n.patch
gtl/test/: BUILD.bazel  copy_only_int.cc  copy_only_int.h  gtest_util.h  move_only_int.h
java-transient-fault-handling/: BUILD.bazel  README.adoc  pom.xml
java-transient-fault-handling/src/main/java/io/github/hcoona/retry/: AsyncExecution.java  ExponentialBackoff.java  FixedInterval.java  ITransientErrorDetectionStrategy.java  Incremental.java  Ref.java  RetryLimitExceededException.java  RetryManager.java  RetryPolicy.java  RetryStrategy.java  ShouldRetry.java
nail/: BUILD.bazel  PORTING.adoc  README.md  datatype.cc  empty_main.cc  grammar.h  main.cc  mk_directparser.cc  mk_gen.cc  mk_parser.cc  nailtool.h  new_grammar.nail  new_grammar.nail.c  new_grammar.nail.h  parser_template.c  parser_template.cc  parser_template.h  util.cc
nail/examples/zip/: BUILD.bazel  extract.c  zip.c
native-named-mutex/: BUILD.bazel  LICENSE  README.adoc  pom.xml
native-named-mutex/src/main/java/io/github/hcoona/concurrent/: AbandonedMutexException.java  Errno.java  Fcntl.java  Kernel32Ext.java  LibCExt.java  NamedMutex.java  NamedMutexFileLockImpl.java  NamedMutexPosixImpl.java  NamedMutexWindowsImpl.java  PosixErrorException.java  Pthread.java  Stat.java
native-named-mutex/src/main/java/io/github/hcoona/utils/: AbandonedMutexException.java  Errno.java  Fcntl.java  Kernel32Ext.java  LibCExt.java  NamedMutex.java  NamedMutexFileLockImpl.java  NamedMutexPosixImpl.java  NamedMutexWindowsImpl.java  PosixErrorException.java  Pthread.java  Stat.java
native-named-mutex/src/test/java/io/github/hcoona/concurrent/: NamedMutexFileLockImplTest.java  NamedMutexPosixImplTest.java  NamedMutexTest.java  NamedMutexWindowsImplTest.java  (+1 more)
parquet/: BUILD.bazel  statistics.cc
redirect_launcher/: BUILD.bazel  launcher.c  launcher.h  launcher_null.c  main.c
service/: BUILD.bazel  event.h  event_dispatcher.h  event_dispatcher_sync_impl.h  event_dispatcher_sync_impl_test.cc  event_handler.h  service.h  service_impl.cc  service_impl.h  service_impl_test.cc  service_state.cc  service_state.h
status/: BUILD.bazel  status_or.cc  status_or.h  status_or_test.cc  status_util.h
util/: BUILD.bazel  casts.h  protobuf_util.cc  protobuf_util.h
zkclient/: BUILD.bazel  README.adoc  main.cc  zkadapter.cc  zkadapter.h  zkadapter_test.cc  zkclient.cc  zkclient.h
(+463 files in other folders)
