# Copyright (c) 2022 Zhang Shuai<zhangshuai.ustc@gmail.com>.
# All rights reserved.
#
# This file is part of ONE.
#
# ONE is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# ONE is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# ONE. If not, see <https://www.gnu.org/licenses/>.

load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
# bazel run //:requirements.update to update requirements.txt file from pyproject.toml
compile_pip_requirements(
    name = "requirements",
    src = "pyproject.toml",
    extra_args = ["--all-extras", "--newline LF"],
    requirements_txt = "requirements.txt",
)
