# Copyright (c) 2022 Zhang Shuai<zhangshuai.ustc@gmail.com>.
# All rights reserved.
#
# This file is part of ONE.
#
# ONE is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# ONE is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# ONE. If not, see <https://www.gnu.org/licenses/>.

module(
    name = "com_github_hcoona_one",
    version = "1.0.0-dev",
    compatibility_level = 1,
)

#
# Toolchains
#

bazel_dep(name = "toolchains_llvm", version = "1.0.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "17.0.6",
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "rules_python", version = "0.33.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "mono_pip_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "mono_pip_deps")


bazel_dep(name = "rules_perl", version = "0.2.0")

#
# Dependencies
#

bazel_dep(name = "boost.graph", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.program_options", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.property_map", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.property_tree", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.xpressive", version = "1.83.0.bzl.1")
single_version_override(
    module_name = "boost.xpressive",
    patch_strip = 1,
    patches = ["//bazel/third_party/boost.xpressive:ipp-hdrs.patch"],
)

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "rapidjson", version = "1.1.0")

#
# Dev Dependencies
#

bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.4", dev_dependency = True)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
#
#   bazel run @hedron_compile_commands//:refresh_all
#
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
