[project]
authors = [
  {name = "Shuai Zhang", email = "zhangshuai.ustc@gmail.com"},
]
dependencies = [
  "absl-py<2.0,>=1.0.0",
  "jinja2<4.0,>=3.0.3",
  "pyyaml<7.0,>=6.0",
]
description = "Python project manager for ONE repo"
name = "one"
requires-python = ">=3.7"
version = "0.0.1-alpha.1"

[tool.pdm.dev-dependencies]
dev = [
  "cpplint<2.0,>=1.5.5",
  "isort<6.0,>=5.8.0",
  "pylint<3.0,>=2.7.4",
  "yapf<1.0,>=0.31.0",
]

# [[tool.pdm.source]]
# name = "pypi"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# verify_ssl = true

[tool.pdm.build]
includes = []

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=1.0.0"]

[tool.isort]
force_single_line = true
indent = "    "
line_length = 80

[tool.yapf]
based_on_style = "google"
column_limit = 80
split_before_named_assigns = true

[tool.pyright]
exclude = [
  "bazel-*/**",
  "third_party/**",
]
