[project]
authors = [
    {name = "Shuai Zhang", email = "zhangshuai.ustc@gmail.com"},
]
dependencies = [
    "absl-py>=2.1.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
]
description = "Python project manager for ONE repo"
name = "one"
requires-python = ">=3.11"
version = "1.0.0-dev"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
force_single_line = true
indent = "    "
line_length = 80

[tool.yapf]
based_on_style = "google"
column_limit = 80
split_before_named_assigns = true

[tool.pyright]
exclude = [
    "bazel-*/**",
    "third_party/**",
]

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "cpplint>=1.6.1",
    "isort>=5.13.2",
    "pylint>=3.2.4",
    "yapf>=0.40.2",
    "mkdocs>=1.6.0",
    "markdown-include>=0.8.1",
]
