[project]
name = "one"
version = "1.0.0-dev"
description = "Python project manager for ONE repo"
authors = [
    {name = "Shuai Zhang", email = "zhangshuai.ustc@gmail.com"},
]
dependencies = [
    "absl-py>=2.1.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
lint = [
    "cpplint>=1.6.1",
    "isort>=5.13.2",
    "pylint>=3.2.4",
    "yapf>=0.40.2",
]
doc = [
    "mkdocs>=1.6.0",
    "markdown-include>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
force_single_line = true
indent = "    "
line_length = 80

[tool.yapf]
based_on_style = "google"
column_limit = 80
split_before_named_assigns = true

[tool.pyright]
exclude = [
    "bazel-*/**",
    "third_party/**",
]
