load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

cc_library(
    name = "arrow",
    srcs = [
        "array.cc",
        "array/builder_adaptive.cc",
        "array/builder_base.cc",
        "array/builder_binary.cc",
        "array/builder_decimal.cc",
        "array/builder_dict.cc",
        "array/builder_nested.cc",
        "array/builder_primitive.cc",
        "array/builder_union.cc",
        "array/concatenate.cc",
        "array/dict_internal.cc",
        "array/diff.cc",
        "array/validate.cc",
        "buffer.cc",
        "builder.cc",
        "c/bridge.cc",
        "compare.cc",
        "device.cc",
        "extension_type.cc",
        "io/buffered.cc",
        "io/caching.cc",
        "io/compressed.cc",
        "io/file.cc",
        "io/hdfs.cc",
        "io/hdfs_internal.cc",
        "io/interfaces.cc",
        "io/memory.cc",
        "io/slow.cc",
        "memory_pool.cc",
        "pretty_print.cc",
        "record_batch.cc",
        "result.cc",
        "scalar.cc",
        "sparse_tensor.cc",
        "status.cc",
        "table.cc",
        "table_builder.cc",
        "tensor.cc",
        "tensor/coo_converter.cc",
        "tensor/csc_converter.cc",
        "tensor/csf_converter.cc",
        "tensor/csr_converter.cc",
        "testing/util.cc",
        "type.cc",
        "util/basic_decimal.cc",
        "util/bit_util.cc",
        "util/compression.cc",
        "util/cpu_info.cc",
        "util/decimal.cc",
        "util/delimiting.cc",
        "util/formatting.cc",
        "util/future.cc",
        "util/int_util.cc",
        "util/io_util.cc",
        "util/iterator.cc",
        "util/key_value_metadata.cc",
        "util/logging.cc",
        "util/memory.cc",
        "util/parsing.cc",
        "util/string.cc",
        "util/string_builder.cc",
        "util/task_group.cc",
        "util/thread_pool.cc",
        "util/time.cc",
        "util/trie.cc",
        "util/uri.cc",
        "util/utf8.cc",
        "vendored/base64.cpp",
        "vendored/datetime/tz.cpp",
        "vendored/double-conversion/bignum.cc",
        "vendored/double-conversion/bignum-dtoa.cc",
        "vendored/double-conversion/cached-powers.cc",
        "vendored/double-conversion/diy-fp.cc",
        "vendored/double-conversion/double-conversion.cc",
        "vendored/double-conversion/fast-dtoa.cc",
        "vendored/double-conversion/fixed-dtoa.cc",
        "vendored/double-conversion/strtod.cc",
        "visitor.cc",
    ] + [
        "util/compression_lz4.cc",
    ] + [
        "util/compression_snappy.cc",
    ] + [
        "util/compression_zlib.cc",
    ] + [
        "compute/context.cc",
        "compute/expression.cc",
        "compute/kernels/add.cc",
        "compute/kernels/aggregate.cc",
        "compute/kernels/boolean.cc",
        "compute/kernels/cast.cc",
        "compute/kernels/compare.cc",
        "compute/kernels/count.cc",
        "compute/kernels/filter.cc",
        "compute/kernels/hash.cc",
        "compute/kernels/isin.cc",
        "compute/kernels/match.cc",
        "compute/kernels/mean.cc",
        "compute/kernels/minmax.cc",
        "compute/kernels/nth_to_indices.cc",
        "compute/kernels/sort_to_indices.cc",
        "compute/kernels/sum.cc",
        "compute/kernels/take.cc",
        "compute/kernels/util_internal.cc",
        "compute/logical_type.cc",
        "compute/operation.cc",
        "compute/operations/cast.cc",
        "compute/operations/literal.cc",
    ] + [
        "ipc/dictionary.cc",
        "ipc/feather.cc",
        "ipc/message.cc",
        "ipc/metadata_internal.cc",
        "ipc/options.cc",
        "ipc/reader.cc",
        "ipc/writer.cc",
    ] + glob([
        "**/*.h",
    ]) + glob(["**/*.hpp"]),
    copts = ONE_DEFAULT_COPTS,
    defines = [
        "URI_STATIC_BUILD",
        "ARROW_USE_GLOG",
        "ARROW_HAVE_SSE4_2",
        "ARROW_WITH_LZ4",
        "ARROW_WITH_SNAPPY",
        "ARROW_WITH_ZLIB",
        "HAS_STRING_VIEW=0",
        "HAS_VOID_T=0",
        "HAS_DEDUCTION_GUIDES=0",
    ],
    includes = ["."],
    linkopts = ONE_DEFAULT_LINKOPTS + [
        "-ldl",
    ],
    textual_hdrs = ["vendored/xxhash/xxhash.c"],
    visibility = ["//visibility:public"],
    deps = [
        ":uri",
        "//third_party/hadoop:hdfs",
        "@com_github_google_flatbuffers//:runtime_cc",
        "@com_github_google_glog//:glog",
        "@com_github_google_snappy//:snappy",
        "@com_github_lz4_lz4//:lz4",
        "@com_github_madler_zlib//:zlib",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "uri",
    srcs = [
        "vendored/uriparser/UriCommon.c",
        "vendored/uriparser/UriCompare.c",
        "vendored/uriparser/UriEscape.c",
        "vendored/uriparser/UriFile.c",
        "vendored/uriparser/UriIp4.c",
        "vendored/uriparser/UriIp4Base.c",
        "vendored/uriparser/UriMemory.c",
        "vendored/uriparser/UriNormalize.c",
        "vendored/uriparser/UriNormalizeBase.c",
        "vendored/uriparser/UriParse.c",
        "vendored/uriparser/UriParseBase.c",
        "vendored/uriparser/UriQuery.c",
        "vendored/uriparser/UriRecompose.c",
        "vendored/uriparser/UriResolve.c",
        "vendored/uriparser/UriShorten.c",
    ],
    hdrs = glob(["vendored/uriparser/*.h"]),
    copts = ONE_DEFAULT_COPTS,
    defines = [
        "URI_STATIC_BUILD",
    ],
    linkopts = ONE_DEFAULT_LINKOPTS,
)
