load(":compiler_config_setting.bzl", "create_llvm_config")

package(default_visibility = ["//visibility:public"])

create_llvm_config(
    name = "llvm_compiler",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "msvc_compiler",
    flag_values = {
        "@bazel_tools//tools/cpp:compiler": "msvc-cl",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "ppc",
    constraint_values = [
        "@platforms//cpu:ppc",
    ],
)

# TODO(zhangshuai.ustc): Build very basic libraries with -Og or -O3
config_setting(
    name = "dbg",
    values = {
        "compilation_mode": "dbg",
    },
)

config_setting(
    name = "opt",
    values = {
        "compilation_mode": "opt",
    },
)
