load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "config",
    hdrs = [
        "config.h",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "enable_sse2",
    values = {
        "copt": "-msse2",
    },
)

config_setting(
    name = "enable_sse42",
    values = {
        "copt": "-msse4.2",
    },
)

config_setting(
    name = "enable_avx2",
    values = {
        "copt": "-mavx2",
    },
)

config_setting(
    name = "enable_bmi2",
    values = {
        "copt": "-mbmi2",
    },
)
