load("@rules_cc//cc:defs.bzl", "cc_library")
load("@bazel_skylib//lib:selects.bzl", "selects")

cc_library(
    name = "config",
    hdrs = [
        "config.h",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "enable_sse2",
    values = {
        "copt": "-msse2",
    },
)

config_setting(
    name = "enable_sse42",
    values = {
        "copt": "-msse4.2",
    },
)

selects.config_setting_group(
    name = "enable_sse2_or_later",
    match_any = [
        ":enable_sse2",
        ":enable_sse42",
    ],
)

config_setting(
    name = "enable_avx2",
    values = {
        "copt": "-mavx2",
    },
)

config_setting(
    name = "enable_bmi2",
    values = {
        "copt": "-mbmi2",
    },
)
