load("@rules_cc//cc:defs.bzl", "cc_binary")
load(
    "//bazel/copts:configure.bzl",
    "ONE_DEFAULT_COPTS",
    "ONE_DEFAULT_LINKOPTS",
)

cc_binary(
    name = "directory_manifest",
    srcs = [
        "generator.cc",
        "generator.h",
        "macros.h",
        "main.cc",
    ],
    copts = ONE_DEFAULT_COPTS,
    linkopts = ONE_DEFAULT_LINKOPTS,
    deps = [
        "//gtl:file_system",
        "//gtl:macros",
        "//gtl:posix_file_system",
        "//gtl/container:circular_deque",
        "//gtl/crypto:sha2",
        "//third_party/gflags",
        "//third_party/glog",
    ],
)
