load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "bits",
    hdrs = ["bits.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":compiler_specific",
        "//config",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "bits_test",
    srcs = ["bits_unittest.cc"],
    deps = [
        ":bits",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "compiler_specific",
    hdrs = ["compiler_specific.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//config",
    ],
)

cc_library(
    name = "file_system",
    srcs = [
        "file_system.cc",
        "file_system_helper.cc",
    ],
    hdrs = [
        "file_statistics.h",
        "file_system.h",
        "file_system_helper.h",
        "null_file_system.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":path",
        ":scanner",
        "//config",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_library(
    name = "posix_file_system",
    srcs = ["posix_file_system.cc"],
    hdrs = ["posix_file_system.h"],
    deps = [
        ":file_system",
        "//config",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "file_system_test",
    srcs = ["file_system_test.cc"],
    deps = [
        ":file_system",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "iterator_range",
    hdrs = ["iterator_range.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "iterator_range_test",
    srcs = [
        "iterator_range_test.cc",
    ],
    deps = [
        ":iterator_range",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "map_util",
    hdrs = [
        "map_traits.h",
        "map_util.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "map_util_test",
    srcs = [
        "map_util_test.cc",
    ],
    deps = [
        ":map_util",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "path",
    srcs = ["path.cc"],
    hdrs = ["path.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scanner",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_test(
    name = "path_test",
    srcs = ["path_test.cc"],
    deps = [
        ":path",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "priority_queue_util",
    hdrs = ["priority_queue_util.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "scanner",
    srcs = ["scanner.cc"],
    hdrs = ["scanner.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "scanner_test",
    srcs = ["scanner_test.cc"],
    deps = [
        ":scanner",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "top_n",
    hdrs = ["top_n.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "top_n_test",
    srcs = [
        "top_n_test.cc",
    ],
    deps = [
        ":top_n",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/random",
        "@com_google_googletest//:gtest_main",
    ],
)
